Fix for Tab Wrapping Small Viewports
This fixes issue where the 3rd tab wraps on smaller viewports such as the iPhone 5.

Fixes #881

--- a/src/sass/overrides/_overrides.scss
+++ b/src/sass/overrides/_overrides.scss
@@ -14,3 +14,13 @@
 .pac-container {
   z-index: 1051 !important;
 }
+
+@media all and (max-width: 320px) {
+  .nav {
+    > li {
+      > a {
+        padding: 10px 5px;
+      }
+    }
+  }
+}
